# stra

./: CMakeLists.txt  LICENSE  README.md  tests.sh
src/: allocator.hpp  arena.hpp  arraylist.hpp  ast.cpp  ast.hpp  codegen.cpp  codegen.hpp  codegen_abi.cpp  codegen_builtin.cpp  comptime.cpp  containers.hpp  environment.cpp  environment.hpp  evaluator.cpp  evaluator.hpp  helper.cpp  helper.hpp  main.cpp  operator.cpp  operator.hpp  parser.cpp  parser.hpp  print.cpp  print.hpp  symbol.hpp  token.hpp  tokenizer.cpp  tokenizer.hpp  types.hpp
src/abi/: general.cpp  general.hpp  sysvamd64.cpp
src/codegen/: builtin.cpp  codegen.cpp  codegen.hpp  convert.cpp  define.hpp  function.cpp  operator.cpp  passes.hpp
src/codegen/abi/: general.cpp  general.hpp  sysvamd64.cpp
src/comptime/: builtin.cpp  comptime.cpp  comptime.hpp  operator.cpp
src/evaluator/: builtin.cpp  define.hpp  desugar.cpp  evaluator.cpp  evaluator.hpp  function.cpp  generics.cpp  operator.cpp  type.cpp
src/evaluator/comptime/: comptime.cpp
tests/: alignof.stra  enum.stra  float_cast.stra  for.stra  function.stra  generics.stra  if.ll  if.stra  int_cast.stra  sizeof.stra  slice.stra  slice_cast.stra  struct.stra
